# altra64

./: .gitignore  Makefile  README.md
docker/: setup-linux-32bittoolchain.sh
rust/: Cargo.toml  Dockerfile  cbindgen.toml  mips-nintendo64-none.json
rust/src/: lib.rs
src/: main.c  menu_about.c
